--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
         <a href="#letter">给绿色玩家的一封信</a>
         <!-- 可以根据需要继续添加更多导航链接 -->
     </div>
-
-    <!-- 新增最新QQ官方群聊部分 -->
+    
+     <!-- 新增最新QQ官方群聊部分 -->
     <div class="qq-group">
-        <a href="https://qm.qq.com/cgi-bin/qm/qr?k=YOUR_KEY" target="_blank">加入最新QQ官方群聊：1037159969</a>
+        <a href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=1037159969&card_type=group&source=qrcode" target="_blank">加入QQ群：1037159969</a>
     </div>
 
     <div class="container">
