--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     
      <!-- 新增最新QQ官方群聊部分 -->
     <div class="qq-group">
-        <a href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=1037159969&card_type=group&source=qrcode" target="_blank">加入QQ群：1037159969</a>
+        <a href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=1037159969&card_type=group&source=qrcode" target="_blank">点击加入QQ群：1037159969</a>
     </div>
 
     <div class="container">
