--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
             color: red;
             margin-top: 10px;
         }
+        .qq-group {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .qq-group a {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #2E8B57;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .qq-group a:hover {
+            background-color: #226633;
+        }
     </style>
 </head>
 <body>
@@ -115,6 +130,10 @@
     <div class="container" id="content" style="display:none;">
         <div class="title">遇强文件官方网页</div>
         <div class="description">在这里，我们用技术定义未来，用文件连接世界</div>
+
+        <div class="qq-group">
+            <a href="https://qm.qq.com/cgi-bin/qm/qr?k=YOUR_QQ_GROUP_CODE" target="_blank">加入最新QQ官方群聊：1037159969</a>
+        </div>
 
         <div class="container section" id="introduction">
             <h2>介绍群聊</h2>
@@ -181,7 +200,7 @@
             </p>
             <ol>
                 <li>即使有防封措施，也要适当“演”一下，避免过于明显的作弊行为。</li>
-                <li>避免过于夸张的操作，比如“百米腰射”等容易引起怀疑的行为。</li>
+                <li>避免过于夸张的操作，比如“百米腰射”等容易引起怀疑
                 <li>不要使用过老的文件，因为它们可能已经不再安全。</li>
                 <li>确保每一个文件都正确导入，避免因操作失误导致封号。</li>
                 <li>如果封号时间较短（如10分钟），很可能是你的操作过于激进，建议适当“演”一下。</li>
@@ -192,8 +211,8 @@
             <ul>
                 <li>文件群需要提升活跃度，但不能骂人、刷屏。</li>
                 <li>我们一般过了十二点就结束处理售后问题。</li>
-                <li>单文件单人使用，  
-                  <div class="container section" id="letter">
+                <li>单文件单人使用，如果发现传播，永久拉黑   
+            <div class="container section" id="letter">
         <h2>给绿色玩家的一封信</h2>
         <p>
             致所有绿色玩家一封信：
@@ -268,4 +287,4 @@
         }
         return true; // 允许表单提交
     }
-</script>
+                </script>
