--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="description">在这里，我们用技术定义未来，用文件连接世界</div>
 
         <div class="qq-group">
-            <a href="https://qm.qq.com/cgi-bin/qm/qr?k=YOUR_QQ_GROUP_CODE" target="_blank">加入最新QQ官方群聊：1037159969</a>
+            <a href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=1037159969&card_type=group&source=qrcode" target="_blank">加入QQ群：1037159969</a>
         </div>
 
         <div class="container section" id="introduction">
@@ -271,7 +271,7 @@
             "终究不可能", "治愈系", "小川.", "小cat久揍模式", "许馆", "小皮", "小帅",
             "小透明", "薛霞", "嘻嘻嘻", "小郁", "宇", "守望着你", "孙小喘", "甜甜呀",
             "荒", "雾起", "wwue", "X", "潇🌹", "小安", "phonk", "柒", "七.", "秦岭维何",
-            "Re.", "染回归号", "Serein", "死枪6", "商微"
+            "Re.", "染回归号", "Serein", "死枪6", "商微" ,"失望゛"
         ];
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
