--- a/index.html
+++ b/index.html
@@ -91,21 +91,6 @@
             color: red;
             margin-top: 10px;
         }
-        .qq-group {
-            text-align: center;
-            margin: 20px 0;
-        }
-        .qq-group a {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #2E8B57;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .qq-group a:hover {
-            background-color: #226633;
-        }
     </style>
 </head>
 <body>
@@ -130,10 +115,6 @@
     <div class="container" id="content" style="display:none;">
         <div class="title">遇强文件官方网页</div>
         <div class="description">在这里，我们用技术定义未来，用文件连接世界</div>
-
-        <div class="qq-group">
-            <a href="mqqapi://card/show_pslcard?src_type=internal&version=1&uin=1037159969&card_type=group&source=qrcode" target="_blank">加入QQ群：1037159969</a>
-        </div>
 
         <div class="container section" id="introduction">
             <h2>介绍群聊</h2>
@@ -200,7 +181,7 @@
             </p>
             <ol>
                 <li>即使有防封措施，也要适当“演”一下，避免过于明显的作弊行为。</li>
-                <li>避免过于夸张的操作，比如“百米腰射”等容易引起怀疑
+                <li>避免过于夸张的操作，比如“百米腰射”等容易引起怀疑的行为。</li>
                 <li>不要使用过老的文件，因为它们可能已经不再安全。</li>
                 <li>确保每一个文件都正确导入，避免因操作失误导致封号。</li>
                 <li>如果封号时间较短（如10分钟），很可能是你的操作过于激进，建议适当“演”一下。</li>
@@ -211,80 +192,86 @@
             <ul>
                 <li>文件群需要提升活跃度，但不能骂人、刷屏。</li>
                 <li>我们一般过了十二点就结束处理售后问题。</li>
-                <li>单文件单人使用，如果发现传播，永久拉黑   
-            <div class="container section" id="letter">
-        <h2>给绿色玩家的一封信</h2>
-        <p>
-            致所有绿色玩家一封信：
-        </p>
-        <p style="color: #ff6347;">
-            外挂是工具，<br>
-            开挂是手段，<br>
-            手段是能力，<br>
-            作弊是智慧。<br>
-            没挂就别叫，<br>
-            有挂就得开。<br>
-            开挂已是无敌路，<br>
-            何须再用智慧补。<br>
-        </p>
-        <p style="color: #ff6347;">
-            开挂有路你不走，<br>
-            绿色无门你自投。<br>
-            外挂是最强的外设，<br>
-            强者总会被针对。<br>
-            练枪是小径，<br>
-            自瞄是大道。<br>
-            意识会出错，<br>
-            透视秒全场。<br>
-        </p>
-        <p style="color: #ff6347;">
-            不要问为什么开挂，<br>
-            因为你已经习惯愚蠢。<br>
-            开挂人均天资聪丽，<br>
-            因为真正的高手都善于走捷径。<br>
-            在熙熙攘攘的生活中享受外挂。<br>
-            当绿色玩家被无情击败，<br>
-            他们才会明白离成功只差一个板子。<br>
-            苦海无涯，回头是挂。<br>
-            外挂是最踏实的那条路，<br>
-            现在开还来得及。<br>
-        </p>
-        <p style="color: #ff6347;">
-            当你练习了一辈子，<br>
-            站在山巅才发现外挂在嘲笑你。<br>
-            开挂的人，<br>
-            没人嘲笑你。<br>
-        </p>
+                <li>单文件单人使用，</li>
+            </ul>
+        </div>
+
+        <div class="container section" id="letter">
+            <h2>给绿色玩家的一封信</h2>
+            <p>
+                致所有绿色玩家一封信：
+            </p>
+            <p style="color: #ff6347;">
+                外挂是工具，<br>
+                开挂是手段，<br>
+                手段是能力，<br>
+                作弊是智慧。<br>
+                没挂就别叫，<br>
+                有挂就得开。<br>
+                开挂已是无敌路，<br>
+                何须再用智慧补。<br>
+            </p>
+            <p style="color: #ff6347;">
+                开挂有路你不走，<br>
+                绿色无门你自投。<br>
+                外挂是最强的外设，<br>
+                强者总会被针对。<br>
+                练枪是小径，<br>
+                自瞄是大道。<br>
+                意识会出错，<br>
+                透视秒全场。<br>
+            </p>
+            <p style="color: #ff6347;">
+                不要问为什么开挂，<br>
+                因为你已经习惯愚蠢。<br>
+                开挂人均天资聪丽，<br>
+                因为真正的高手都善于走捷径。<br>
+                在熙熙攘攘的生活中享受外挂。<br>
+                当绿色玩家被无情击败，<br>
+                他们才会明白离成功只差一个板子。<br>
+                苦海无涯，回头是挂。<br>
+                外挂是最踏实的那条路，<br>
+                现在开还来得及。<br>
+            </p>
+            <p style="color: #ff6347;">
+                当你练习了一辈子，<br>
+                站在山巅才发现外挂在嘲笑你。<br>
+                开挂的人，<br>
+                没人嘲笑你。<br>
+            </p>
+        </div>
     </div>
-</div>
 
-<script>
-    function validateLogin() {
-        const validUsernames = [
-            "诚信赢天下", "123fa78", "打压所有圈子", "感觉至上", "空白", "探花", "专注售后",
-            "爱里寻欢", "爱慕", "阿瑞", "安枫", "baller", "贝贝", "Brooooooo!", "别说话别说话",
-            "不起名字", "博泽", "Di忆冬", "淡然", "fire in the hole", "个涵", "辉", "行川",
-            "花海", "涵涵也会伤感.", "黑名单", "谎言", "极镜", "l", "墨", "Man", "密码",
-            "念神", "逆天了老铁", "??", "😎✌", "^O^", "₍₍⁽◍⁾₎₍⁽◍⁾₎", "💰", "va.4e6.等你",
-            "❤️💕💕", "。。", "🐱", "😏👌", "😔", "😃", "😎", "🤔", "😈", "😼", "🐸", "🌵",
-            "😳", "😈", "??", "😎👌", "^O^", "月月", "一只不要被动...", "自爆(敢过来可...",
-            "终究不可能", "治愈系", "小川.", "小cat久揍模式", "许馆", "小皮", "小帅",
-            "小透明", "薛霞", "嘻嘻嘻", "小郁", "宇", "守望着你", "孙小喘", "甜甜呀",
-            "荒", "雾起", "wwue", "X", "潇🌹", "小安", "phonk", "柒", "七.", "秦岭维何",
-            "Re.", "染回归号", "Serein", "死枪6", "商微" ,"失望゛"
-        ];
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
-        const message = document.getElementById('message');
-        const content = document.getElementById('content');
+    <script>
+        function validateLogin() {
+            const validUsernames = [
+                "诚信赢天下", "123fa78", "打压所有圈子", "感觉至上", "空白", "探花", "专注售后",
+                "爱里寻欢", "爱慕", "阿瑞", "安枫", "baller", "贝贝", "Brooooooo!", "别说话别说话",
+                "不起名字", "博泽", "Di忆冬", "淡然", "fire in the hole", "个涵", "辉", "行川",
+                "花海", "涵涵也会伤感.", "黑名单", "谎言", "极镜", "l", "墨", "Man", "密码",
+                "念神", "逆天了老铁", "??", "😎✌", "^O^", "₍₍⁽◍⁾₎₍⁽◍⁾₎", "💰", "va.4e6.等你",
+                "❤️💕💕", "。。", "🐱", "😏👌", "😔", "😃", "😎", "🤔", "😈", "😼", "🐸", "🌵",
+                "😳", "😈", "??", "😎👌", "^O^", "月月", "一只不要被动...", "自爆(敢过来可...",
+                "终究不可能", "治愈系", "小川.", "小cat久揍模式", "许馆", "小皮", "小帅",
+                "小透明", "薛霞", "嘻嘻嘻", "小郁", "宇", "守望着你", "孙小喘", "甜甜呀",
+                "荒", "雾起", "wwue", "X", "潇🌹", "小安", "phonk", "柒", "七.", "秦岭维何",
+                "Re.", "染回归号", "Serein", "死枪6", "商微",
+                "出书&", "和故", "故不叫故", "有你", "倏符" // 新添加的用户名
+            ];
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+            const message = document.getElementById('message');
+            const content = document.getElementById('content');
 
-        if (validUsernames.includes(username) && password === 'yyh666') {
-            content.style.display = 'block';
-            message.textContent = '登录成功！欢迎进入遇强文件官方网页。';
-        } else {
-            message.textContent = '用户名或密码错误。如果您没有用户名或密码，请联系3870149287。';
-            return false; // 阻止表单提交
+            if (validUsernames.includes(username) && password === 'yyh666') {
+                content.style.display = 'block';
+                message.textContent = '登录成功！欢迎进入遇强文件官方网页。';
+            } else {
+                message.textContent = '用户名或密码错误。如果您没有用户名或密码，请联系3870149287。';
+                return false; // 阻止表单提交
+            }
+            return true; // 允许表单提交
         }
-        return true; // 允许表单提交
-    }
-                </script>
+    </script>
+</body>
+                        </html>
