--- a/index.html
+++ b/index.html
@@ -91,6 +91,21 @@
             color: red;
             margin-top: 10px;
         }
+        .captcha-container {
+            margin: 10px 0;
+        }
+        .logout-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #ff6347;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .logout-btn:hover {
+            background-color: #ff4500;
+        }
     </style>
 </head>
 <body>
@@ -107,9 +122,15 @@
             <p>您的用户名就是在文件群的名字。</p>
             <input type="text" id="username" placeholder="请输入您的用户名" required>
             <input type="password" id="password" placeholder="yyh666" required>
+            <div class="captcha-container">
+                <p>请输入验证码：</p>
+                <input type="text" id="captcha" placeholder="验证码" required>
+                <span id="captcha-display"></span>
+            </div>
             <input type="submit" value="登录">
         </form>
         <p id="message" class="message"></p>
+        <button class="logout-btn" onclick="logout()" style="display: none;">登出</button>
     </div>
 
     <div class="container" id="content" style="display:none;">
@@ -243,35 +264,39 @@
     </div>
 
     <script>
-        function validateLogin() {
-            const validUsernames = [
-                "诚信赢天下", "123fa78", "打压所有圈子", "感觉至上", "空白", "探花", "专注售后",
-                "爱里寻欢", "爱慕", "阿瑞", "安枫", "baller", "贝贝", "Brooooooo!", "别说话别说话",
-                "不起名字", "博泽", "Di忆冬", "淡然", "fire in the hole", "个涵", "辉", "行川",
-                "花海", "涵涵也会伤感.", "黑名单", "谎言", "极镜", "l", "墨", "Man", "密码",
-                "念神", "逆天了老铁", "??", "😎✌", "^O^", "₍₍⁽◍⁾₎₍⁽◍⁾₎", "💰", "va.4e6.等你",
-                "❤️💕💕", "。。", "🐱", "😏👌", "😔", "😃", "😎", "🤔", "😈", "😼", "🐸", "🌵",
-                "😳", "😈", "??", "😎👌", "^O^", "月月", "一只不要被动...", "自爆(敢过来可...",
-                "终究不可能", "治愈系", "小川.", "小cat久揍模式", "许馆", "小皮", "小帅",
-                "小透明", "薛霞", "嘻嘻嘻", "小郁", "宇", "守望着你", "孙小喘", "甜甜呀",
-                "荒", "雾起", "wwue", "X", "潇🌹", "小安", "phonk", "柒", "七.", "秦岭维何",
-                "Re.", "染回归号", "Serein", "死枪6", "商微",
-                "出书&", "和故", "故不叫故", "有你", "倏符" // 新添加的用户名
-            ];
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            const message = document.getElementById('message');
-            const content = document.getElementById('content');
-
-            if (validUsernames.includes(username) && password === 'yyh666') {
-                content.style.display = 'block';
-                message.textContent = '登录成功！欢迎进入遇强文件官方网页。';
-            } else {
-                message.textContent = '用户名或密码错误。如果您没有用户名或密码，请联系3870149287。';
-                return false; // 阻止表单提交
-            }
-            return true; // 允许表单提交
+        // 设备指纹生成和验证
+        function generateDeviceFingerprint() {
+            const browserInfo = navigator.userAgent;
+            const screenResolution = `${window.screen.width}x${window.screen.height}`;
+            const timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
+            const ipAddress = localStorage.getItem('ipAddress'); // 假设IP地址已存储
+            const language = navigator.language;
+            return `${browserInfo}-${screenResolution}-${timezone}-${ipAddress}-${language}`;
         }
-    </script>
-</body>
-                        </html>
+
+        function validateDeviceFingerprint(username) {
+            const storedFingerprint = localStorage.getItem(`fingerprint_${username}`);
+            const currentFingerprint = generateDeviceFingerprint();
+            return storedFingerprint === currentFingerprint;
+        }
+
+        function storeDeviceFingerprint(username) {
+            const fingerprint = generateDeviceFingerprint();
+            localStorage.setItem(`fingerprint_${username}`, fingerprint);
+        }
+
+        // 验证码生成和验证
+        function generateCaptcha() {
+            const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            let captcha = '';
+            for (let i = 0; i < 6; i++) {
+                captcha += chars.charAt(Math.floor(Math.random() * chars.length));
+            }
+            return captcha;
+        }
+
+        function validateCaptcha(userInput, captcha) {
+            return userInput.toLowerCase() === captcha.toLowerCase();
+        }
+
+       
