--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <li>使用的外挂名称</li>
                 <li>进入最后一把游戏的战绩截图和视频</li>
                 <li>导入文件的完整视频</li>
-                <li>封号的截图</li>
+                <li>封号的截图（必须要）</li>
             </ol>
             <p>
                 请将上述信息一一回复给售后客服，以便我们进行核实。
